2002-02-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-icon-data): New buffer local variable.
	(w3m-clear-local-variables): Add `w3m-icon-data'.
	(w3m-copy-local-variables): Ditto.
	(w3m-fontify-anchors): Setup `w3m-icon-data'.
	(w3m-check-link-tags): Parse `type' of link attribute;
	Set `w3m-icon-data' if `icon' rel attribute exist.
	(w3m-goto-url): Added local variable real-data.

	* w3m-e21.el (w3m-favicon-cache-favicon): Added compatibility code.
	(w3m-setup-favicon): Use w3m-icon-data if it exists;
	Changed first argument for `w3m-retrieve-favicon'.
	(w3m-buffer-favicon): Use car of `w3m-current-favicon-data' as
	image data and cdr as image type.
	(w3m-retrieve-favicon): Changed first argument to cons cell of
	image data and its type.

2002-02-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-save-list): Allow the 4th arg `escape-ctl-chars'.
	(w3m-arrived-shutdown): Call it with the 4th arg.

	* w3m-antenna.el (w3m-antenna-shutdown): Call `w3m-save-list' with
	the 4th arg.

2002-02-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-pixels-per-line): Renamed from w3m-pixel-per-line;
	Fixed custom type.
	(w3m-pixels-per-character): Likewise.
	(w3m-rendering-half-dump): Follow the changes above.

2002-02-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-type): Considerd as an internal variable.
	(w3m-options): Removed.
	(w3m-compile-options): New internal variable.
	(toplevel): Set `w3m-compile-options' instead of `w3m-options'.
	(w3m-treat-image-size): Refer `w3m-compile-options' instead of
	`w3m-options'.
	(w3m-rendering-half-dump): Ditto.
	(w3m-local-file-type): When a remote URL is passed, refer its
	non-directory part to decide its content type.
	(w3m-touch-file): Bind `default-directory' locally.

2002-02-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-pixel-per-line): New user option.
	(w3m-rendering-half-dump): Use `w3m-pixel-per-line' as the -ppl
	argument of the w3m command.