@@ -105,6 +105,9 @@
       (shimbun-mhonarc-get-headers shimbun (shimbun-index-url shimbun)
 				   headers))))
 
+(defvar shimbun-mhonarc-optional-headers
+  '("x-ml-count" "x-ml-name" "user-agent"))
+
 (luna-define-method shimbun-make-contents ((shimbun shimbun-mhonarc)
 					   header)
   (if (search-forward "<!--X-Head-End-->" nil t)
@@ -164,6 +167,42 @@
 	    (goto-char (point-min))
 	    (shimbun-header-insert shimbun header))
 	  (goto-char (point-max)))
+	;; Processing optional headers.
+	(let ((alist)
+	      (cur-point (point))
+	      (start (search-forward "<!--X-Head-of-Message-->" nil t))
+	      (end (and (search-forward "<!--X-Head-of-Message-End-->" nil t)
+			(match-beginning 0))))
+	  (when (and start end)
+	    (save-restriction
+	      (narrow-to-region start end)
+	      (goto-char (point-min))
+	      (while (re-search-forward (shimbun-regexp-opt
+					 '("<strong>" "</strong>" "<em>" "</em>" "</li>"))
+					nil t)
+		(delete-region (match-beginning 0) (match-end 0))
+		(goto-char (match-beginning 0)))
+	      (shimbun-decode-entities)
+	      (goto-char (point-min))
+	      (while (not (eobp))
+		(when (looking-at "<LI>\\([^:]+\\): +")
+		  (when (member (downcase (match-string 1))
+				shimbun-mhonarc-optional-headers)
+		    (push (cons (match-string 1)
+				(shimbun-mime-encode-string
+				 (buffer-substring (match-end 0)
+						   (line-end-position))))
+			  alist)))
+		(forward-line 1))
+	      (delete-region (point-min) (point-max)))
+	    (save-restriction
+	      (narrow-to-region (point-min) cur-point)
+	      (goto-char (point-min))
+	      (when (search-forward "\nMime-Version:" nil t)
+		(forward-line 0)
+		(dolist (p alist)
+		  (insert (car p) " " (cdr p) "\n")))
+	      (goto-char (point-max)))))
 	;; Processing body.
 	(save-restriction
 	  (narrow-to-region (point) (point-max))
